fix: booking and payment
