# internal/controller/portal/rest/payment/ctrl_payment_dto.go
@@ -11,11 +11,11 @@ type NotifyPaymentCond struct {
 	// 3rd Party Transaction ID
 	TransactionID *string `json:"transactionID"`
 	// Payment Provider
-	PaymentProvider *enum.PaymentProvider `json:"paymentProvider" enums:"stripe,paypal,line_pay,apple_pay,google_pay" swaggertype:"string"`
+	Provider *enum.PaymentProvider `json:"provider" enums:"stripe,paypal,line_pay,apple_pay,google_pay" swaggertype:"string"`
 	// Payment Method
-	PaymentMethod *enum.PaymentMethod `json:"paymentMethod" enums:"credit_card,debit_card,bank_transfer" swaggertype:"string"`
+	Method *enum.PaymentMethod `json:"method" enums:"credit_card,debit_card,bank_transfer" swaggertype:"string"`
 	// Payment Status
-	PaymentStatus enum.PaymentStatus `json:"paymentStatus" enums:"pending,success,failed,cancelled" swaggertype:"string"`
+	Status enum.PaymentStatus `json:"status" enums:"pending,success,failed,cancelled" swaggertype:"string"`
 	// Paid time
 	PaidAt *time.Time `json:"paidAt" time_format:"2006-01-02T15:04:05Z07:00"`
 }
